[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simulator"
version = "0.1.0"
description = "Network simulator for Ambient IoT research testbed"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["simulator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
